
public interface AutoFabriek {
    BenzineAuto createBenzineAuto();
    ElektrischeAuto createElektrischeAuto();
}
