public interface BenzineAuto {
    void vroom();

}
