package code;

public class DAutoElektrisch implements ElektrischeAuto{
    @Override
    public void zoom() {
        System.out.println("Goes zoom more expenisive");
    }
}
