package code;

public interface ElektrischeAuto {
    void zoom();
}
