package code;

public class GAutoElektrisch implements ElektrischeAuto{

    @Override
    public void zoom() {
        System.out.println("Go zoom");
    }
}
